--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,48 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".SettingsFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="410dp"
+        android:layout_height="187dp"
+        android:src="@drawable/food_2" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_setting"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="900dp"
+        android:layout_marginTop="115dp"
+        app:cardCornerRadius="50dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/btn_transaksi"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textView11"
+                style="@style/Sub_Header"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CRUD Transaksi"
-                app:layout_constraintTop_toBottomOf="@+id/btn_role"
-                tools:layout_editor_absoluteX="160dp" />
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:text="Makanan yang baik adalah"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/btn_warung"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textView12"
+                style="@style/Header"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CRUD Warung"
-                app:layout_constraintTop_toBottomOf="@+id/btn_transaksi"
-                tools:layout_editor_absoluteX="160dp" />
+                android:text="Dasar Kebahagiaan"
+                android:textSize="20dp"
+                app:layout_constraintStart_toStartOf="@+id/textView11"
+                app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/sprinkle"
+                app:layout_constraintStart_toEndOf="@+id/textView12"
+                app:layout_constraintTop_toTopOf="@+id/textView12" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardviewSubSetting1"
+                android:layout_width="297dp"
+                android:layout_height="125dp"
+                android:backgroundTint="@color/kuning"
+                app:cardCornerRadius="10dp"
+                app:cardPreventCornerOverlap="true"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView12">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/imageView12"
+                        android:layout_width="125dp"
+                        android:layout_height="150dp"
+                        android:layout_marginRight="10dp"
+                        android:src="@drawable/transaksi_2"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        style="@style/Header"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="15dp"
+                        android:text="C R U D"
+                        android:textSize="25dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Button
+                        android:id="@+id/btn_transaksi"
+                        style="@style/Sub_Header"
+                        android:layout_width="125dp"
+                        android:layout_height="40dp"
+                        android:backgroundTint="@color/semi_kuning"
+                        android:text="Transaksi"
+                        app:layout_constraintStart_toStartOf="@+id/textView13"
+                        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardviewSubSetting2"
+                android:layout_width="297dp"
+                android:layout_height="125dp"
+                android:backgroundTint="@color/kuning"
+                app:cardCornerRadius="10dp"
+                app:cardPreventCornerOverlap="true"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardviewSubSetting1">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="297dp"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/imageViewWarung"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:layout_marginLeft="15dp"
+                        android:src="@drawable/warung"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView14"
+                        style="@style/Header"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="12dp"
+                        android:text="C R U D"
+                        android:textSize="25dp"
+                        app:layout_constraintStart_toEndOf="@+id/imageViewWarung"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Button
+                        android:id="@+id/btn_warung"
+                        style="@style/Sub_Header"
+                        android:layout_width="125dp"
+                        android:layout_height="40dp"
+                        android:backgroundTint="@color/semi_kuning"
+                        android:text="Warung"
+                        app:layout_constraintStart_toStartOf="@+id/textView14"
+                        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
 
             <Button
                 android:id="@+id/btn_logout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Logout"
-                app:layout_constraintTop_toBottomOf="@+id/btn_transaksi"
-                tools:layout_editor_absoluteX="160dp" />
-        </LinearLayout>
+                android:layout_marginTop="50dp"
+                style="@style/Text_Button"
+                android:layout_width="290dp"
+                android:layout_height="46dp"
+                android:text="Log Out"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardviewSubSetting2" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</FrameLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
